--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@atomicloud/cyan-sdk": "^1.4.2",
+    "@atomicloud/cyan-sdk": "next",
     "eta": "^3.1.1"
   }
 }
